Fix overlapping elements, move position: fixed from nav to nav's child element

--- a/dynamic-interactions/src/stylesheets/style.css
+++ b/dynamic-interactions/src/stylesheets/style.css
@@ -9,11 +9,15 @@ header {
     background-color: red;
 }
 
-nav {
+nav > ul {
     position: fixed;
 }
 
 .menu-dropdown-button {
+    padding: 0.6em 1em 0.6em 1em;
+}
+
+.dropdown-button {
     padding: 0.6em 1em 0.6em 1em;
 }
 
